base/manifests/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-web-app-analysis
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: finance-web-app-analysis
  template:
    metadata:
      labels:
        app: finance-web-app-analysis
    spec:
      containers:  
        - name: analysis
          image: analysis/image
          imagePullPolicy: Always
