base/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-web-app-backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: finance-web-app-backend
  template:
    metadata:
      labels:
        app: finance-web-app-backend
    spec:
      containers: 
        - name: backend
          image: backend/image
          imagePullPolicy: Always
