base/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-web-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: finance-web-app
  template:
    metadata:
      labels:
        app: finance-web-app  
    spec:
      containers: 
        - name: backend
          image: project/image
          imagePullPolicy: Always
