base/manifests/service-for-analysis.yaml
apiVersion: v1
kind: Service
metadata:
  name: analysis-svc
spec:
  type: ClusterIP
  selector:
    app: finance-web-app-analysis
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3002
