base/manifests/service-for-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: 
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
