base/manifests/service-for-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: finance-web-app-frontend
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
