base/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  serviceName: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
     
      containers:
        - name: database
          image: postgres:17.8-alpine3.22
          ports:
          - name: database
            containerPort: 5432
          volumeMounts:
          - name: data2
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data2
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: project
  labels:
    app: database
spec:
  ports:
    - name: database
      port: 5432
  clusterIP: None
  selector:
    app: database
