base/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 2347
      - path: /api/
        pathType: Prefix
        backend: 
          service:
            name: backend-svc
            port:
              number: 2345
